packages/typ/tests/fixtures/diagnostics/0772_polyvar_call_wrong_tag_02.ml.expected
File "0772_polyvar_call_wrong_tag_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0772_polyvar_call_wrong_tag_02 is not a valid module name.

File "0772_polyvar_call_wrong_tag_02.ml", line 5, characters 18-20:
5 | let _ = read_beta `C
                      ^^
Error: The constructor `C has type [> `C ]
       but an expression was expected of type [ `A | `B ]
       The second variant type does not allow tag(s) `C
